--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.ap_
 *.aab
 
+
 # Files for the ART/Dalvik VM
 *.dex
 
@@ -14,6 +15,7 @@
 bin/
 gen/
 out/
+.android/
 #  Uncomment the following line in case you need and you don't have the release build type files in your app
 # release/
 
